--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body {
     text-align: center;
     background: #35aacb;
-    color: #3d3d3d;
+    color: red;
     font-size: 16spx;
     line-height: 2;
+
 }
